Resolve jumping footer.

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ h1 { padding-top: 15px; }
 .h4 { font-size: 54px; }
 .description { font-size: 24px; }
 
-.lg-h3, .lg-lang-headers, .lg-p { font-size: 26px; }
+.lg-h3, .lg-lang-headers, .lg-p { font-size: 20px; }
 .lg-h4 { font-size: 60px; }
 .lg-description { font-size: 30px; }
 
